setup messaging tier

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,23 +1,99 @@
-version: '3' 
+version: '3.3' 
  
 services: 
+
+  # Web Server Nodes
   node1: 
     build: ./nodejs 
     ports: 
       - "81:3000" 
+    networks:
+      - nodejs
   node2: 
     build: ./nodejs 
     ports: 
-      - "82:3000" 
+      - "82:3000"   
+    networks:
+      - nodejs
   node3: 
     build: ./nodejs 
     ports: 
       - "83:3000" 
+    networks:
+      - nodejs  
+
+  # Web Server Load Balancer
   nginx: 
     build: ./nginx 
     ports: 
       - "80:80" 
+    networks:
+      - nodejs   
     depends_on:
       - node1
       - node2
       - node3
+
+  # Message Service Nodes
+  rabbitmq-stats:
+    image: bitnami/rabbitmq:3.8.14
+    container_name: rabbitmq-stats
+    volumes:
+      - rabbitmq-stats-data:/bitnami
+    environment:
+      - RABBITMQ_NODE_TYPE=stats
+      - RABBITMQ_NODE_NAME=rabbitmq@rabbitmq-stats
+      - RABBITMQ_ERL_COOKIE=password
+    ports:
+      - "40001:15672"
+  rabbitmq-queue-one:
+    image: bitnami/rabbitmq:3.8.14
+    container_name: rabbitmq-queue-one
+    depends_on:
+      - rabbitmq-stats
+    volumes:
+      - rabbitmq-queue-one-data:/bitnami
+    environment:
+      - RABBITMQ_NODE_TYPE=queue-disc
+      - RABBITMQ_NODE_NAME=rabbitmq@rabbitmq-queue-one
+      - RABBITMQ_CLUSTER_NODE_NAME=rabbitmq@rabbitmq-stats
+      - RABBITMQ_ERL_COOKIE=password
+  rabbitmq-queue-two:
+    image: bitnami/rabbitmq:3.8.14
+    container_name: rabbitmq-queue-two
+    depends_on:
+      - rabbitmq-stats
+    volumes:
+      - rabbitmq-queue-two-data:/bitnami
+    environment:
+      - RABBITMQ_NODE_TYPE=queue-disc
+      - RABBITMQ_NODE_NAME=rabbitmq@rabbitmq-queue-two
+      - RABBITMQ_CLUSTER_NODE_NAME=rabbitmq@rabbitmq-stats
+      - RABBITMQ_ERL_COOKIE=password
+  
+  # Message Service Load Balancer
+  haproxy: 
+    image: haproxy:1.7 
+    volumes: 
+      - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro 
+    depends_on: 
+      - rabbitmq-stats 
+      - rabbitmq-queue-one
+      - rabbitmq-queue-two
+    ports: 
+      - 15672:15672 
+      - 5672:5672
+
+# Data Volumes
+volumes:
+  rabbitmq-stats-data:
+    driver: local
+  rabbitmq-queue-one-data:
+    driver: local
+  rabbitmq-queue-two-data:
+    driver: local
+
+# Networking
+networks:
+  nodejs:
+    driver: bridge
