autorun on code change, added a list of helpful commands

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,19 +6,25 @@ services:
   node1: 
     build: ./nodejs 
     ports: 
-      - "81:3000" 
+      - "81:3000"
+    volumes:
+      - ./nodejs/src/main.js:/usr/src/app/main.js:ro
     networks:
       - nodejs
   node2: 
     build: ./nodejs 
     ports: 
       - "82:3000"   
+    volumes:
+      - ./nodejs/src/main.js:/usr/src/app/main.js:ro
     networks:
       - nodejs
   node3: 
     build: ./nodejs 
     ports: 
       - "83:3000" 
+    volumes:
+      - ./nodejs/src/main.js:/usr/src/app/main.js:ro
     networks:
       - nodejs  
 
