--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -1,9 +1,9 @@
 FROM alpine 
 RUN apk add --update nodejs npm 
-WORKDIR /usr/src/app 
 EXPOSE 3000 
+WORKDIR /usr/src/app 
 COPY src/ . 
 RUN ls -la /usr/src/app/* 
-RUN npm install 
-CMD [ "node", "test.js" ]
-
+RUN npm install express mongoose
+RUN npm install pm2 -g
+CMD [ "pm2-runtime", "main.js", "--watch"]
